--- a/modules/function/src/package.json
+++ b/modules/function/src/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/bigquery": "^6.2.0",
     "@google-cloud/functions-framework": "^3.2.0"
   }
 }
